# randon_cpp_experiments

./: CMakeLists.txt  main.cpp  test.json
