cmake_minimum_required(VERSION 3.14)
project(random_experiments)
set(CMAKE_CXX_STANDARD 14)
FIND_PACKAGE(Boost REQUIRED COMPONENTS thread system)
include_directories(gnuplot-iostream)
add_executable(random_experiments main.cpp)
target_include_directories(random_experiments PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries(random_experiments ${Boost_LIBRARIES})